examples/legacy/invalid_scl/type_error_count.scl
input color(o: usize, c: &str)
rel S(a) :- a = count(a: color(_, a))
